--- a/.github/workflows/db_diagrams_renderer.yml
+++ b/.github/workflows/db_diagrams_renderer.yml
@@ -17,6 +17,8 @@ jobs:
     - name: Render .drawio files
       uses: docker://ghcr.io/racklet/render-drawio-action:v1
       with:
+        # Currently broken, see action repo issue #27
+        # Keeping this here for when it will be fixed
         formats: 'png'
         files: 'docs/img/db.png=docs/DB/DB.drawio'
       id: render
@@ -27,7 +29,6 @@ jobs:
     - name: Commit the rendered files
       uses: EndBug/add-and-commit@v7
       with:
-        # This makes the GH Actions user/bot the author of the commit
         default_author: github_actor
         message: 'Automated .drawio file rendering'
         add: "${{ steps.render.outputs.rendered-files }}"
