--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.9'
-
 services:
   db:
-    container_name: postgresql
+    container_name: project_postgres_db
     image: postgres
     shm_size: 128mb # set shared memory limit
     environment:
       POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_DB: store_management_db
     ports:
       - "5432:5432"
