--- a/.github/workflows/uml_diagrams_renderer.yml
+++ b/.github/workflows/uml_diagrams_renderer.yml
@@ -18,7 +18,7 @@ jobs:
       id: plantuml
       uses: grassedge/generate-plantuml-action@v1.5
       with:
-        path: .
+        path: 'docs/uml_diagrams'
         message: "Automated .puml file rendering"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
