--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       POSTGRES_DB: ${PG_DB}
     ports:
       - "5432:5432"
+    volumes:
+      - ./init.sql.gz:/docker-entrypoint-initdb.d
